Css ui/ux remake, high, mid, low animation slider choise, animations, reorder elements, animations for each component, and more, this change broke some things, all bugs will be fixed in the next commit to main, changes between version getting too big

--- a/frontend/src/components/common/card/CardView.css
+++ b/frontend/src/components/common/card/CardView.css
@@ -4,6 +4,8 @@
     border-radius: 4px;
     background-color: #FFFFFF; /* Glossy white background */
     padding: 8px;
+    flex-grow: 1;
+    height: 100%; 
     display: flex;
     cursor: pointer;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
